# mini-shell

./: Cargo.toml  README.md
src/: main.rs
