[package]
name = "mini_shell"
version = "0.1.0"
edition = "2024"
authors = ["Vivek <itsvks19@gmail.com>"]
description = "A cross-platform mini shell written in Rust"
license = "MIT"
repository = "https://github.com/itsvks19/mini-shell"
readme = "README.md"
keywords = ["shell", "cli", "terminal", "rust", "cross-platform"]
categories = ["command-line-utilities"]
homepage = "https://github.com/itsvks19/mini-shell"
exclude = [
    "images/*"
]

[dependencies]
colored = "3.0.0"
dirs = "6.0.0"
is-root = "0.1.3"
is_executable = "1.0.4"
